Fix spacing issues with paragraphs

--- a/css/style.css
+++ b/css/style.css
@@ -120,8 +120,11 @@ body {
 .results {
   padding-top: 16px;
   line-height: 1.4;
-  margin-bottom: 16px;
 }
+
+  .results p {
+    margin-bottom: 16px;
+  }
 
   @media screen and (min-width: 48em) {
     .results {
